internal/chart/testdata/charts/dashboard-traefik.yaml
---
# Source: dashboard/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dashboard-web-3
    theketch.io/app-name: dashboard
    theketch.io/app-process: web
    theketch.io/app-deployment-version: "3"
    theketch.io/is-isolated-run: "false"
  name: dashboard-web-3
spec:
  type: ClusterIP
  ports:
    - name: http-default-1
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    theketch.io/app-name: dashboard
    theketch.io/app-process: web
    theketch.io/app-deployment-version: "3"
    theketch.io/is-isolated-run: "false"
---
# Source: dashboard/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dashboard-worker-3
    theketch.io/app-name: dashboard
    theketch.io/app-process: worker
    theketch.io/app-deployment-version: "3"
    theketch.io/is-isolated-run: "false"
  name: dashboard-worker-3
spec:
  type: ClusterIP
  ports:
    - name: http-default-1
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    theketch.io/app-name: dashboard
    theketch.io/app-process: worker
    theketch.io/app-deployment-version: "3"
    theketch.io/is-isolated-run: "false"
---
# Source: dashboard/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dashboard-web-3
    theketch.io/app-name: dashboard
    theketch.io/app-process: web
    theketch.io/app-process-replicas: "3"
    theketch.io/app-deployment-version: "3"
    theketch.io/is-isolated-run: "false"
  name: dashboard-web-3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dashboard-web-3
      theketch.io/app-name: dashboard
      theketch.io/app-process: web
      theketch.io/app-deployment-version: "3"
      theketch.io/is-isolated-run: "false"
  template:
    metadata:
      labels:
        app: dashboard-web-3
        theketch.io/app-name: dashboard
        theketch.io/app-process: web
        theketch.io/app-deployment-version: "3"
        theketch.io/is-isolated-run: "false"
    spec:
      containers:
        - name: dashboard-web-3
          command: ["python"]
          image: shipasoftware/go-app:v1
          ports:
          - containerPort: 9090
---
# Source: dashboard/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dashboard-worker-3
    theketch.io/app-name: dashboard
    theketch.io/app-process: worker
    theketch.io/app-process-replicas: "1"
    theketch.io/app-deployment-version: "3"
    theketch.io/is-isolated-run: "false"
  name: dashboard-worker-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-worker-3
      theketch.io/app-name: dashboard
      theketch.io/app-process: worker
      theketch.io/app-deployment-version: "3"
      theketch.io/is-isolated-run: "false"
  template:
    metadata:
      labels:
        app: dashboard-worker-3
        theketch.io/app-name: dashboard
        theketch.io/app-process: worker
        theketch.io/app-deployment-version: "3"
        theketch.io/is-isolated-run: "false"
    spec:
      containers:
        - name: dashboard-worker-3
          command: ["celery"]
          image: shipasoftware/go-app:v1
          ports:
          - containerPort: 9090
---
# Source: dashboard/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-http-ingressroute
  annotations:
    kubernetes.io/ingress.class: gke
  labels:
    theketch.io/app-name: dashboard
spec:
  entryPoints:
    - web
  routes:
  - match: Host("theketch.io")
    kind: Rule
    services:
    - name: dashboard-web-3
      port: 9090
      weight: 100
  - match: Host("app.theketch.io")
    kind: Rule
    services:
    - name: dashboard-web-3
      port: 9090
      weight: 100
  - match: Host("dashboard.20.20.20.20.shipa.cloud")
    kind: Rule
    services:
    - name: dashboard-web-3
      port: 9090
      weight: 100
